added some of Sue's comments

--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -39,7 +39,7 @@ obligations to identify limit reference points for major fish stocks prescribed 
 
 Amendments to the Canadian *Fisheries Act* (2019) include new Fish Stocks provisions that introduce legal obligations to manage stocks to promote sustainability and avoid limit reference points, LRPs [@dfoScienceAdvicePrecautionary2021]. The provisions also require plans to rebuild fish stocks that have declined to, or below, an LRP while taking into account the biology of the fish and environmental conditions experienced by the stock. These obligations apply to major fish stocks that are prescribed under regulations. These revisions reinforce the previously established DFO policies to manage stocks consistent with the precautionary approach, including [The Fishery Decision Making Framework Incorporating the Precautionary Approach](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/precaution-eng.htm)[@dfoFisheryDecisionMakingFramework2009], also known as DFO's Precautionary Approach Framework within the [Sustainable Fisheries Framework](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/overview-cadre-eng.html) and Canada's [Wild Salmon Policy](https://www.pac.dfo-mpo.gc.ca/fm-gp/salmon-saumon/wsp-pss/policy-politique-eng.html) [@dfoCanadaPolicyConservation2005].
 
-Under DFO's Precautionary Approach Framework, LRPs represent the stock status below which serious harm is occurring to the stock. Serious harm can result from over-fishing, other human induced mortality, or changes in population dynamics [@dfoHarvestStrategyCompliant2006]. At this stock status level, there may also be resultant impacts to the ecosystem, associated species and a long-term loss of fishing opportunities [@dfoFisheryDecisionMakingFramework2009]. Serious harm to stocks are generally described in terms of impaired productivity due to changes in recruitment, growth, maturation and survival [@dfoProceedingsNationalPeer2016a], where resulting declines are irreversible or only slowly reversible [@kronlundSelectionRoleLimit2018]. Serious harm can occur due to depensatory mortality (or Allee effects) that occur because of, for example, increased predation rates or inability to find mates at very low abundances [@chenIncorporatingAlleeEffects2002]. Serious harm can also be associated with loss of resilience [@smithTechnicalGuidelinesProvision2012] and the inability to recover from perturbations [@dfoFisheryDecisionMakingFramework2009] due to losses of phenotypic and genotypic diversity.
+Under DFO's Precautionary Approach Framework, LRPs represent the stock status below which serious harm is occurring to the stock. Serious harm can result from over-fishing, other human induced mortality, or changes in population dynamics [@dfoHarvestStrategyCompliant2006]. At this stock status level, there may also be resultant impacts to the ecosystem, associated species and a long-term loss of fishing opportunities [@dfoFisheryDecisionMakingFramework2009]. Serious harm to stocks are generally described in terms of impaired productivity due to changes in recruitment, growth, maturation and survival [@dfoProceedingsNationalPeer2016a], where resulting declines are irreversible or only slowly reversible [@kronlundSelectionRoleLimit2018]. Serious harm can occur due to depensatory mortality (or Allee effects) that occur because of, for example, increased predation rates or inability to find mates at very low abundances [@chenIncorporatingAlleeEffects2002]. Serious harm can also be associated with loss of resilience [@smithTechnicalGuidelinesProvision2012] and the inability to recover from perturbations [@dfoFisheryDecisionMakingFramework2009] due changes in stock structure or losses of phenotypic and genotypic diversity.
 Because population dynamics are not well understood at low population sizes [@dfoHarvestStrategyCompliant2006] and Allee effects are only infrequently observed [@keithPopulationDynamicsMarine2012, but see @chenIncorporatingAlleeEffects2002 and @cunninghamSizeSelectivityPredation2013], a biological basis for serious harm is often difficult to identify and quantify. 
 
 Furthermore, the definition of serious harm from @dfoFisheryDecisionMakingFramework2009 indicates that LRPs should be *above* the level where serious harm occurs, not at the level where it is occurring, and that long-term loss of fishing opportunities may occur below that level.  Defining the level before serious harm occurs to a species or ecosystem is a pervasive challenge as harm is often not identified until it is already occurring [@hilbornQuantitativeFisheriesStock1986]. Also, this definition of serious harm mentions possible impacts on other ecosystem components, which are often challenging to identify because of limited data and poor understanding of mechanisms driving declines in productivity [but see @chagarisEcologicalReferencePoints2020].
@@ -71,7 +71,7 @@ While the assessment of Pacific salmon under the WSP has focused on setting benc
 
 Considering CU status is important, in part because threats on Pacific salmon act at a variety of spatial scales. The Fish Stocks provisions pertain to fisheries at scales relevant to harvest management, but for Pacific salmon, threats and management actions can range from local freshwater habitats and estuaries to regional climate change in marine and freshwater environments. Also, multiple levers are used by managers to achieve objectives for Pacific salmon which extend beyond fisheries, including habitat restoration and hatchery enhancement which occur at a variety of spatial scales.  Indeed, for many SMUs, fisheries have been restricted in recent decades [@grantStateCanadianPacific2020], such that habitat and hatchery management are playing an increasingly dominant role in management responses. These decisions require stock assessments and responses at a hierarchy of spatial scales from a watershed-level within CUs to larger aggregates of CUs at regional-scales, sometimes across Pacific salmon species. 
 
-Given the existing framework for assessing status of Pacific salmon by CUs [@holtIndicatorsStatusBenchmarks2009] and the similar intent of LRPs defined by DFO's Precautionary Approach Framework and lower benchmarks under the WSP, status against lower benchmarks can be used as proxies for status against for LRPs but applied at the scale of CUs instead of SMUs. Our challenge is to identify LRPs that integrate CU-level statuses across component CUs within an SMU.  The present work expands on previous work to establish assessment methods under the WSP by providing guidance on establishing LRPs at the scale of Pacific salmon SMUs. 
+Given the existing framework for assessing status of Pacific salmon by CUs [@holtIndicatorsStatusBenchmarks2009] and the similar intent between LRPs defined by DFO's Precautionary Approach Framework and lower benchmarks under the WSP, status against lower benchmarks can be used as proxies for status against for LRPs but applied at the scale of CUs instead of SMUs. The present work expands on assessment methods developed under the WSP by providing guidance on establishing LRPs at the scale of Pacific salmon SMUs by integrating across CU-level statuses within an SMU. At finer spatial scales, the existing framework for CU assessments includes consideration of the distribution of spawners within CUs, e.g., at the stream level [@dfoIntegratedBiologicalStatus2016]. Here we also consider distribution at sub-populations within CUs when those are considered to be important for the sustainability of the CU or SMU.
 
 Alternative spatial scales of assessment and management are used by agencies outside of DFO for Pacific salmon, including Designatable Units used by COSEWIC which largely aligne with DFO's CUs, and Stock Groups under the Pacific Salmon Treaty, which align to some extent with SMUs. These units are often not aligned with Conservation Units - the biological unit of conservation under DFO's WSP - and are not considered further here. Although the LRPs presented here are applied at the SMU scale, these methods could also be applied at smaller or larger scales to inform a variety management decisions.
 
@@ -83,14 +83,14 @@ The goals of this working paper as outlined in the Terms of Reference were to:
 
 - Develop candidate methods for identifying SMU-level LRPs for Pacific salmon that are consistent with the WSP objective of conserving biodiversity by maintaining CUs above lower biological benchmarks.  These candidate methods include LRPs based on the status of component CUs and aggregate abundance over multiple CUs, where CU assessments can be developed using a multidimensional or single-metric approaches, as appropriate. (See Section \@ref(cu-est-methods))
 
-- Document candidate methods for developing LRPs at the SMU-level, including data requirements and assumptions. (See Section \@ref(est-methods) and Appendix \@ref(app:links)). More details are provided in companion paper, Holt et al. (in review).^[Holt et al. Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units. CSAS Working Paper In review] 
+- Document candidate methods for developing LRPs at the SMU-level, including data requirements and assumptions. (See Section \@ref(est-methods) and Appendix \@ref(app:links)). More details are provided in companion paper, Holt et al. (In review).^[Holt et al. Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units. CSAS Working Paper In review] 
 
 - Document key uncertainties that affect LRP estimates for each method considered, including uncertainties arising from missing or limited CU-level data. (See Section \@ref(recommendations))
 
 - Provide guidance and recommendations on the application of candidate methods over a range of data types and availability. (See Section \@ref(guidelines))
 
 
-This working paper addresses these four goals, while the companion Working Paper (Holt et al. in review) provides a more detailed and technical descriptions of candidate methods for developing LRPs and more fully demonstrates their implementation on three case studies. Summaries of methods and case sutides are included here for the completeness of these guidelines.
+This working paper addresses these four goals, while the companion Working Paper (Holt et al. In review) provides a more detailed and technical descriptions of candidate methods for developing LRPs and more fully demonstrates their implementation on three case studies. Summaries of methods and case sutides are included here for the completeness of these guidelines.
 
 
 In particular, this paper has five components: 
@@ -99,7 +99,7 @@ In particular, this paper has five components:
 
 2. Principles for the development of LRPs for Pacific salmon (Section \@ref(principles))
 
-3. A tool kit of candidate LRP methods (Section \@ref(est-methods)), with further details in Holt et al. (in review). Appendix \@ref(app:case-studies) summaries their application to case studies.
+3. A tool kit of candidate LRP methods (Section \@ref(est-methods)), with further details in Holt et al. (In review). Appendix \@ref(app:case-studies) summaries their application to case studies.
 
 4. Guidelines on the implementation of LRPs including recommendations on when, and when not to use each candidate LRP method (Section \@ref(guidelines))
 
@@ -117,7 +117,7 @@ While one role of LRPs is to trigger the development of rebuilding plans under t
 
 Time-varying population processes, such as changes in productivity, have important impacts on biological benchmark, LRPs, and assessment against LRPs. While we describe some recent approaches for considering those changes in Section \@ref(review) on the review of reference points, a comprehensive review and evaluation of the impacts of time-varying parameters on LRPs is beyond the scope of this study. This theme is an important area for future research.
 
-While we follow the recommendation of @holtIndicatorsStatusBenchmarks2009 to assess status of CUs using multiple metrics, we have implemented this approach using a multidimensional algorithm, the Pacific Salmon Status Scanner (or Salmon Scanner), documented in Pestal et al. (in prep), developed from the implementation of formal, peer-reviewed WSP assessments for Pacific salmon stocks in Canada. A full review of the Salmon Scanner is beyond the scope of this paper.  Furthermore, a review of individual benchmarks of CU status is beyond the scope of this paper.
+While we follow the recommendation of @holtIndicatorsStatusBenchmarks2009 to assess status of CUs using multiple metrics, we have implemented this approach using a multidimensional algorithm, the Pacific Salmon Status Scanner (or Salmon Scanner), documented in Pestal et al. (In prep.)^[Pestal, G., MacDonald, B, Grant, S, and Holt, C. Rapid Status Approximations from Integrated Expert Assessments Under Canada’s Wild Salmon Policy. Can. Tech. Rep. Fish. Aquat. Sci. In prep.], developed from the implementation of formal, peer-reviewed WSP assessments for Pacific salmon stocks in Canada. A full review of the Salmon Scanner is beyond the scope of this paper.  Furthermore, a review of individual benchmarks of CU status is beyond the scope of this paper.
 
 Decisions about prioritizing CUs for conservation within an SMU (e.g., evaluating the costs and benefits of conserving individual CUs given differential vulnerability to climate change or other stressors) is also beyond our scope, requiring a broader discussion with local knowledge holders, managers and stakeholders.
 
