--- a/guidelinesWP/05-chap5.Rmd
+++ b/guidelinesWP/05-chap5.Rmd
@@ -6,12 +6,12 @@ CW: CSASdown automatically capitalizes the titles and subtitles according to the
 -->
 ## STEPWISE APPROACH FOR SELECTING LRPS
 
-We recommend a step-wise approach for identifying LRPs, with the proportion of component CUs with status above Red as the default method. Aggregate abundance-based LRPs are presented as an option for cases in which they are required for fisheries management (e.g., local or international), but are considered supplemental to the proportion of CUs with status above Red. The step-wise approach considers data availability for candidate LRP methods and provides guidance when inconsistencies in status occur from applying multiple LRP methods. These steps can be adapted in the future as more methods are developed and/or these methods are further evaluated.
+We recommend a step-wise approach for identifying LRPs, with the proportion of component CUs with status above Red as the default method. This is the method recommended to meet the *Fisheries Act* requirement for LRPs, and can be applied to numerous aspects of salmon management, including hatchery, harvest, and habitat management. Aggregate abundance-based LRPs are presented as an option for cases in which they are required for fisheries management (e.g., local or international), but are considered supplemental to the proportion of CUs with status above Red. The step-wise approach presented below considers data availability for candidate LRP methods and provides guidance when inconsistencies in status occur from applying multiple LRP methods. These steps can be adapted in the future as more methods are developed and/or these methods are further evaluated. <!--CH: insert new figure-->
 
-### Data Availability and Spatial Scale (Step 1)
+### STEP 1: Data Compilation
 
 
-The first step is to compile CU-level data to support biological status assessments as described under the WSP [@holtIndicatorsStatusBenchmarks2009; @holtEvaluatingBenchmarksBiological2018], where those data exist. These data include (but are not limited to) time-series of spawner abundances, recruitment, hatchery contributions, productivity, and biological benchmarks on spawner abundances.   This step generally includes aggregating fine scale data on streams or spawning sites to the CU level. 
+The first step is to compile CU-level data to support biological status assessments as described under the WSP [@holtIndicatorsStatusBenchmarks2009; @holtEvaluatingBenchmarksBiological2018]. These data include (but are not limited to) time-series of spawner abundances, recruitment, hatchery contributions, productivity, and biological benchmarks on spawner abundances. This step generally includes aggregating data on the spawning site or stream level to the CU level. 
 
 In some cases, finer spatial scales than CU (e.g., watersheds or subpopulations within CUs) may be considered to delineate serious harm to the SMU. Although CUs are the population unit of assessment and conservation required under the WSP, the distribution of spawning within CUs (e.g., among watersheds) can be an important component of status [@holtIndicatorsStatusBenchmarks2009] and these finer scales can be considered. 
 
@@ -21,42 +21,27 @@ Distribution is a commonly cited component of salmon viability and recovery [@mc
 We recommend that the decision on spatial scale of conservation for biological assessments be part of the peer-review process for CU and SMU assessments, and be based on biological principles of conservation and viability (e.g., as reviewed in @bradfordReviewBiologicalPrinciples2004 and @mcelhanyViableSalmonidPopulations2010). 
 
 
-Within this step, information on hatchery enhancement is used to identify populations where production is dominated by hatchery-origin fish.  Populations in which production is dominated by hatchery-origin fish (identified by PNI values < 0.5, or expert opinion when data on the proportion of hatchery-origin spawners are not available) should be excluded from analyses, while those that are dominated by natural-origin fish (e.g., PNI values are $\geqslant$ 0.5), should be included in analyses.  These thresholds are based on guidelines proposed by [@withlerGeneticallyBasedTargets2018], where PNI values were averaged over the time-period for which hatchery objectives have remained stable. Further, where time-series of the proportion of hatchery-origin salmon on the spawning grounds are available and production is dominated by natural-origin fish, these proportions can be used to generate time-series of natural-origin recruitment for benchmark estimation and natural-origin spawners for status assessment against benchmarks. When the influence of hatchery production is removed in this way, the assessments are less sensitive to the presence of hatcheries and annual variation in hatchery practices.  
+Within this step, information on hatchery enhancement is used to identify populations where production is dominated by hatchery-origin fish.  Populations in which production is dominated by hatchery-origin fish (identified by PNI values < 0.5, or expert opinion when data on the proportion of hatchery-origin spawners are not available) are generally excluded from analyses, while those that are dominated by natural-origin fish (e.g., PNI values are $\geqslant$ 0.5), are generally included in analyses [@withlerGeneticallyBasedTargets2018]. Further, where time-series of the proportion of hatchery-origin salmon on the spawning grounds are available and production is dominated by natural-origin fish, these proportions can be used to generate time-series of natural-origin recruitment for benchmark estimation and natural-origin spawners for status assessment against benchmarks. When the influence of hatchery production is removed in this way, the assessments are less sensitive to the presence of hatcheries and annual variation in hatchery practices.  
 
-Infilling among streams or spawning sites for years with missing data is commonly used when compiling CU-level spawner abundance series. When infilled time series are used to estimate LRPs and monitor stock status relative to LRPs, consideration should be given to the scale at which infilling is done at. For example, if LRPs are based on maintaining CU-level (or inlet-level) diversity, infilling of missing data should not be based on escapements from outside of the CU (or inlet). In addition, hatchery enhancement should be carefully accounted for when infilling to avoid overestimating abundances when infilled numbers are based on sites that are artificially enhanced and when enhancement levels vary during the time series, to the extent possible. 
-
-<!--KH:
-
-I am wondering if it would be relevant to include mention of infilling here.  Or, maybe in the next step 2?  Luke uses it for Chum, but it is not used for Chinook (likely because of complications with hatchery enhancement).  I also think that stream-level infilling was done for some of the coho data before I received it. I did add an edit to the case study paper that said to refer to the guidlines paper on infilling guidelines, so let me know if it isn;t relevant to the guidelines paper, and I will remove the case study paper reference.
-
-Maybe adding a paragraph along the lines of:
-
-Infilling among streams or spawning sites for years with missing data is commonly used when compiling CU-level spawner abundance series. When infilled time series are being  LRPs and monitoring stock status relative to LRPs, consideration should be given to the scale at which infilling is being done at.  For example, if LRPs are based on maintaining CU-level (or inlet-level) diversity, infilling of missing data should not be based on escapements from outside of the CU (or inlet). Similarly, for CUs with moderate or high hatchery enhancement and / or straying among sites of hatchery fish, infilling should not be done among sites with varying levels of hatchery enhancement.  (KH: is this the best way to say this?  Are there other ways)      
-
-CH: added, rewording the last sentence. Does it look okay? I think avoiding strays is pretty hard, and may be  as much a genetic concern as a demographic numbers concern.
-
-KH: Looks good. I agree on strays.
--->
+Infilling among streams or spawning sites for years with missing data is commonly used when compiling CU-level spawner abundance series [e.g., see @grantEvaluationUncertaintyFraser2011; @brown2020SummaryAbundance2020]. When infilled time series are used to estimate LRPs and monitor stock status relative to LRPs, consideration should be given to the scale at which infilling is done at. For example, if LRPs are based on maintaining CU-level (or inlet-level) diversity, infilling of missing data should not be based on escapements from outside of the CU (or inlet). In addition, hatchery enhancement should be carefully accounted for when infilling to avoid overestimating abundances when infilled numbers are based on sites that are artificially enhanced and when enhancement levels vary during the time series, to the extent possible. 
 
 
-  
-### Assessing Data Deficiency (Step 2)
+### Step 2: Assessing Data Deficiency
 
-Second, CUs with data to support biological assessments are identified. CUs are assessed based on a variety of metrics including abundances and trends, and are considered data deficient when data or benchmarks are insufficient on all metrics for assessments under the WSP [@holtIndicatorsStatusBenchmarks2009]. For example, CUs are only considered data deficient when data to assess temporal trends in spawner abundances (over at least 3 generations) and data on current spawner abundances and associated CU-level abundance benchmarks are missing or insufficient, such as when the number of hatchery-origin salmon are estimated insufficiently on the spawning grounds. As a general guideline, we define current spawner abundances as the geometric average spawner abundances over the most recent generation, where data are insufficient on abundances if there are no data in the most recent generation. For short-term trend analyses, data are considered insufficient when they include less than half of available years in the last three generations or are of low quality representing only presence/absence. These criteria for trend detection are similar to criteria described in @brown2020SummaryAbundance2020 and applied to spawning sites of Chinook Salmon in Southern BC. 
+Second, CUs with data to support biological assessments are identified; those without sufficient data are considered data deficient. CUs are assessed based on a variety of metrics including abundances and trends, and data requirements for these metrics vary. At a minimum, a CU must have an index of spawner abundance time-series. These data can be used to estimate trends over time against benchmarks that are common across CUs [@@holtIndicatorsStatusBenchmarks2009]. For short-term trend analyses, data are considered insufficient when they include less than half of available years in the last three generations or are of low quality representing only presence/absence. These criteria for trend detection are similar to criteria described in @brown2020SummaryAbundance2020 and applied to spawning sites of Chinook Salmon in Southern BC. 
 
+In addition, current spawner abundances can be compared to abundance-based benchmarks, where current spawner abundances are generally defined as the geometric average spawner abundances over the most recent generation.  For this metric, at least one year of spawner abundances is required in the current generation to compare against benchmarks. CU-specific benchmarks on spawner abundances can be derived from spawner-recruitment models, percentiles of spawner time-series, or habitat characteristics. Data requirements for benchmark estimation on spawner abundances differ according to the methods applied and are not explicitly defined here. Local biological expertise is required to review available data and benchmarks prior to assessments to identify data deficiencies. For example, <!--spawner-recruitment benchmarks developed from hierarchical multi-stock models require fewer years of data than those based on individual stock-recruitment models. In addition, -->changes in environmental conditions over time may result in historical data that are no longer representative of current conditions, resulting in data deficiencies. 
 
-CU-specific benchmarks on spawner abundances can be derived from spawner-recruitment models, percentiles of spawner time-series, or habitat characteristics. Data requirements for benchmark estimation on spawner abundances differ according to the methods applied and are not explicitly defined here. For example, spawner-recruitment benchmarks developed from hierarchical multi-stock models require fewer years of data than those based on individual stock-recruitment models. In addition, changes in environmental conditions over time may result in historical data that are no longer representative of current conditions, resulting in data deficiencies. Local biological expertise is required to review available data and benchmarks prior to assessments to identify data deficiencies.
-
-In addition, a CU may be data deficient when data to resolve the existence of the CU are insufficient. For example, @holtbyConservationUnitsPacific2007 describe provisional CUs pending acquisition of genetic samples to differentiate them from neighbouring CUs. Further work verifying, expanding, and updating these guidelines for data deficiencies in the context of different salmon species, life-histories, and assessment metrics is warranted. 
+<!--In addition, a CU may be data deficient when data to resolve the existence of the CU are insufficient. For example, @holtbyConservationUnitsPacific2007 describe provisional CUs pending acquisition of genetic samples to differentiate them from neighbouring CUs. Further work verifying, expanding, and updating these guidelines for data deficiencies in the context of different salmon species, life-histories, and assessment metrics is warranted. -->
 
 
-### Can Data Deficient CUs be Represented by CUs With Data? (Step 3)
-<!-- CH comment: send this section to Diana Dobson and Brendan for review-->
+### Step 3: Can Data Deficient CUs be Represented by CUs With Data?
+<!--CH to condense where possible, maybe add a table of key considerations-->
 
 Third, the extent to which status of data deficient CUs can be inferred from CUs with data is evaluated. By definition, data deficient CUs do not have data on population dynamics to rigorously evaluate this inference through SMU-specific correlation analyses, though information on threats and biological characteristics may be available. To infer status for data deficient CUs, at a minimum we recommend providing evidence that: (i) the threats impacting data deficient CUs are likely to be the same as for CUs with data and their magnitudes are similar,  (ii) environmental drivers are similar among CUs, e.g., as reflected by the distribution of CUs across freshwater and marine ecosystems, (iii) biological characteristics, such as life-history type and dominant age-at-maturity of data-deficient CUs are represented in the CUs with data, and (iv) population capacity of data deficient CUs is likely in the range of those represented by CUs with data. Evidence supporting these criteria should be clearly documented and reviewed by local experts. The burden of proof would be to identify that data deficient CUs have similar properties to neighbouring CUs, with the default assumption that each CU represents unique biodiversity where status and trends cannot be represented by other CUs. We describe the four criteria in more detail below.
 
 
-**Threats** are defined here as any human activity <!-- Luke: could this also include natural processes and hazards (e.g., landslides)? Some processes could be not directly linked to human activity (e.g., scouring floods) but could be exacerbated by human activity (logging, climate change). CH: I took this defn directly from SARA, so would prefer to keep as is for now-->or process that causes harm, death, or behavioural changes to a species, or the destruction, degradation, and/or impairment of its habitat, to the extent that population-level effects occur [@dfoGuidanceAssessingThreats2014]. Information on threats may be derived from published threats and habitat assessments, and may incorporate harvest, effects of land-use in freshwater and estuarine habitats, climate change, and genetic impacts from hatcheries. Because SMUs are defined as groups of CUs that are managed together with the objective of achieving a joint status, it is likely that CUs within an SMU will have similar vulnerabilities to fisheries. Data on genetic stock identification from fisheries can be used to further assess similarities in vulnerabilities in harvest. Beyond fisheries, CUs that are vulnerable to different threats in freshwater and marine environment within an SMU may have divergent statuses and trends.  
+**Threats** are defined here as any human activity or process that causes harm, death, or behavioural changes to a species, or the destruction, degradation, and/or impairment of its habitat, to the extent that population-level effects occur [@dfoGuidanceAssessingThreats2014]. Information on threats may be derived from published threats and habitat assessments, and may incorporate harvest, effects of land-use in freshwater and estuarine habitats, climate change, and genetic impacts from hatcheries. Because SMUs are defined as groups of CUs that are managed together with the objective of achieving a joint status, it is likely that CUs within an SMU will have similar vulnerabilities to fisheries. Data on genetic stock identification from fisheries can be used to further assess similarities in vulnerabilities in harvest. Beyond fisheries, CUs that are vulnerable to different threats in freshwater and marine environment within an SMU may have divergent statuses and trends.  
 
 Although SMUs are usually defined to be spatially cohesive groups of CUs, SMUs and their component CUs can vary in **environmental conditions**,  related to variability in freshwater and marine ecosystems,  macroclimate, and hydrology within an SMU. CUs containing unique environmental conditions may diverge in status and trends from neighbouring CUs, either due to the different environmental drivers or the interaction of the different environments with anthropogenic threats. <!--LW: could probably use some more refs here to strengthen the logic. I will look for some--> @holtbyConservationUnitsPacific2007 used freshwater ecological drainage units [@ministryoftheenvironmentEcologicalAquaticUnits2021] to differentiate freshwater ecosystems for Pacific salmon ("Freshwater Adaptive Zones", FAZs). These FAZs account for differences in climate conditions, river gradient, hydrology and connectivity. They consist of salmon populations with shared zoogeographic histories at relatively fine spatial scales. In some cases neighbouring CUs share a common FAZ (e.g., WCVI Chinook Salmon), but more often CUs tend to be associated with unique FAZs and therefore they may be less useful for identifying similarities in environmental conditions among CUs. Other levels of aggregation of ecological drainage units could be developed in the future to inform similarities in freshwater conditions among CUs.
 
@@ -97,7 +82,7 @@ As an aside. I wonder if we need a table to show these 4 options from combinatio
 
 -->
 
-### Proportion of CUs Above Red Status Required to Avoid Serious Harm (Step 4)
+### Step 4: Proportion of CUs Above Red Status Required to Avoid Serious Harm
 
 @dfoFisheryDecisionMakingFramework2009 indicates that LRPs are based on biological criteria identified by Science, independent of management processes. Given the goal of the WSP to protect the biodiversity of Pacific salmon in part by maintaining CUs above lower biological benchmarks, we have identified a threshold of 100$\%$ of CUs above the Red zone as an LRP that will avoid serious harm. Exceptions to this may occur where there is uncertainty or mis-identification in the delineation of CUs (e.g., as for some transboundary CUs @holtbyConservationUnitsPacific2007) or CUs are designated extinct. Those CUs would be omitted from the total number of (extant) CUs within the SMU. <!--LW: question, so if a CU goes extinct it doesn't count in the 100% LRP for the SMU anymore? Wouldn't a CU going extinct represent serious harm/impaired productivity?- CH: but when it's extinct by definition it can't be recovered so a rebulidng plan is moot; unlike extirpated or critically endangered. CH: if it's extinct it cannot be rebuilt by definition. I think out goal is to  assess serious harm on extant CUs. Proof of extinction takes a long time (.e., 30-50 years under COSEWIC), so I don't think this the case for many; Until it's designated extinct it would still be considered serious harm. -->This step omits decisions about how to prioritize CUs for conservation under growing threats, including climate change. <!--LW: unclear whether this sentence is saying that you don't need to do a cost-benefit analysis or whether that is part of another step, or that we didn't do this. Also the phrase of 'if only a portion can be conserved under growing threats, including climate change' has a lot wrapped up in it. Seems like there is unwritten context about history and how much we can do to preserve stocks, and what measures could be taken (moratoriums?) vs. what would actually be done. Suggest removing that phrase or clarifying. Removing CUs for this reason seems like a cultural/value idea than based off serious harm. I'm thinking about CUs/populations that could have been in 'serious harm' category for many decades, from a biological perspective they have just been below LRP for a long time. Does that justify disregarding them? Has this come up at TWG meetings?  CH: changed wording to omit, if only a portion can be conserved. This did come up in TWG mtgs, but we can't make those decision here.-->Those decisions would require collaboration with various sectors involved in the management of the SMU, beyond those involved in the science-based process of identifying LRPs. Some CUs may be naturally more vulnerable to threats because of their biological or population characteristics (e.g., due to small habitat capacities), however, that natural vulnerability does not diminish the serious harm associated with the biodiversity loss if that CU is lost in the face of ongoing threats. <!--CH: this last sentence is meant to get at the possible exemption of CUs that are naturally at low abundance and "red". The counter argument I heard at the TWG meeting was that those CUs still have ongoing threats and so separating 'natural' vulnerability from threats that deplete a CU is tricky, and probably too hard for us to attempt. And the loss of any CU is serious harm.".-->  In addition, for some CUs the potential for rebuilding to above the red zone may be extremely low. These considerations should be identified in a rebuilding potential analysis to prioritize where resources should be allocated in a rebuilding plan (e.g., @carwardinePriorityThreatManagement2019)<!--LW: I like this point, in light of above comments it distinguishes the setting of LRP at 100% of CUs (which might trigger LRP based on very low abundance CUs which might be at very low probability of recovery based on current/future conditions) vs. the rebuilding plan which can then weigh practicality of recovery. I think this is an important distinction-->.  Considerations on rebuilding potential should be part of the management objectives [@kronlundConsiderationsDesignRebuilding2021] but are outside scope of identifying LRPs.
 
@@ -107,7 +92,7 @@ Furthermore, unlike many other marine fisheries, threats and management levers f
 Once LRPs are identified, SMU-level objectives can be specified and management procedures can then be evaluated to identify those approaches that best meet objectives, including the prioritization of CU-specific interventions. Furthermore, objectives and management actions can be adapted to a range of spatial scales from CU to regional or multi-SMU scales and then evaluated in a hierarchical context. The proposed LRP presented here of 100$\%$ of component CUs above the Red status within an SMU is a first step in that process.
 
 
-### Assess Status Relative to Proportion-based LRP (Step 5)
+### Step 5: Assess Status Relative to Proportion-based LRP
 
 The status of individual CUs is assessed and the proportion of CUs with status above Red is then compared to the LRP of 100% identified from step 4.  Where available, we recommend applying CU assessments from recent peer-reviewed WSP Integrated Status Assessments, in which multiple metrics, such as abundances and short- and long-term trends, are integrated to assign CU status within an expert-driven process [@holtIndicatorsStatusBenchmarks2009; @dfoWildSalmonPolicy2015; @dfoIntegratedBiologicalStatus2016; @grant2017FraserSockeye2020]. Here we define recent as within the most recent generation as a general guideline, though major perturbations such as landslide events may make even recent assessments unrepresentative of current conditions if the impact of those events are not accounted for. <!--CH remove: Over time-periods longer than a generation, the extent to which the assessment is still representative depends on the dynamics of the specific system.-->
 
@@ -172,7 +157,7 @@ LW: I agree, that would be useful!
 
 
 
-### Peer-review Assessments of Status Relative to Proportion-based LRP (Step 6)
+### Step 6: Peer-review Assessments of Status Relative to Proportion-based LRP
 <!--CH comment: this section needs input from Sue-->
 
 We recommend peer-review of the CU data and assessments used in steps 1 and 5 if CU assessment are developed outside of an existing published, peer-reviewed process. Also, we recommend peer-review of decisions on SMU-scale aggregation from steps 2, 3 and 4. This peer review can occur, at least in part, through DFO's State of the Salmon Program's annual implementation of the Pacific Salmon Status Scanner. The Salmon Scanner will be applied annually as part of a process integrating outputs with local expertise to provide provisional statuses for CUs. Expert review is required to vet statuses derived from the implementation of the Salmon Scanner to ensure they are consistent with underlying biological categories given the multiple and sometimes conflicting dimensions of status. <!--CH: Ann-Marie suggested an example from Fraser Sockeye Shuswap here, but I wonder if it might make the flow of this section awkward? Happy to consider an inclusion from Ann-Marie--> The outputs from that process can be the basis for developing CU-level statuses to inform SMU-level LRPs. We emphasize the importance of rigorous peer-review of LRPs and status assessments against them for those SMUs prescribed under regulation, either as part the annual application of Salmon Scanner or in a separate SMU-specific  peer-review process. This peer review process would include assessment of component CUs and decisions about data deficiencies and CU representativeness covering steps 1-5 above, and be documented in a CSAS Research Document, CSAS Science Response, and/or CSAS Science Advice Report.<!--CH question: Is this requirement for CSAS documentation okay? We should ask Julie/Jason to what extent this is consistent with out marine species, and then mention the consistency here. Some TWG participants suggested LRP identification could occur in the rebuilding plan, but this seems awkward as rebuilding objectives may be related to LRPs, or at least they will in other species, so best to keep the 2 processes separate I think.
@@ -205,7 +190,7 @@ CH: revised accordingly. Does this revised text capture it?
 
 The frequency of SMU-scale peer reviews outside of the annual implementation of the Salmon Scanner will depend on variability in CU-level population dynamics over time and how LRPs and SMU-level assessments are used to inform decision making (e.g., if an SMU is batched under the *Fisheries Act"), among other factors. In the future, management procedures with various frequencies of assessments could be evaluated in a simulation framework to identify risks of delaying assessments relative to costs of implementing them. 
 
-### Are Aggregate Abundance-Based LRPs Required For Fisheries Management? (Step 7)
+### Step 7: Are Aggregate Abundance-Based LRPs Required For Fisheries Management? 
 
 Although proportion-based LRPs may meet requirements under the Fish Stock provisions for Pacific salmon, abundance-based LRPs may be needed for fisheries management decision making (see Section \@ref(roleLRPs)).  For SMUs where harvest at the aggregate scale is a dominant driver of population dynamics and restricting fisheries harvest is a principle lever, an LRP along the metric of aggregate abundances of the SMU may support precautionary management. For example, when LRPs are used to inform a harvest control rule, fishing pressure can be gradually curtailed as aggregate abundances drop towards the LRP to avoid depletion below it. Aggregate abundance-based benchmarks may in some cases be required for local or international management. For example, for Nass and Skeena Sockeye aggregate escapement goals are required under the Pacific Salmon Treaty @TreatyGovernmentCanada2019 <!--CH: check that this compiles to (2019)-->, though to comply with the WSP, the status of component CUs should also be considered. 
 
@@ -215,7 +200,7 @@ However, when LRPs are defined within the context of a Management Procedure fram
 In the context described here, aggregate abundance-based LRPs are scientifically derived quantities that delineate serious harm to an SMU following the principles outlined in Section \@ref(principles). Although these LRPs can inform harvest control rules, harvest management decisions require consideration of multiple objectives beyond those associated with conservation and serious harm (e.g., socioeconomic objectives). 
 
 
-### What is Acceptable Probability of Achieving Proportion-Based LRP? (Step 8)
+### Step 8: What is Acceptable Probability of Achieving Proportion-Based LRP? 
 
 
 Aggregate abundance-based LRPs are defined to be consistent with the WSP objective of maintaining biodiversity at the scale of CUs. First, an acceptable probability of achieving the proportion-based LRP (i.e., all CUs above Red status) is identified. We recommend applying a probability of at least 50% of all CUs being above Red status to align with WSP objectives. We provide LRPs associated with four probabilities, 50%, 66%, 90%, and 99% derived from categories of likelihoods used by the International Panel on Climate Change [@mastrandreaGuidanceNoteLead2010], instead of specifying a single probability because we could not identify a scientific basis for the choice (see Section \@ref(logisticMethods)). 
@@ -244,7 +229,7 @@ Future applications of this Step 8 when setting LRPs may want to consider the re
 
 
 
-### Choose among aggregate abundance-based LRPs (Step 9)
+### Step 9: Choose among aggregate abundance-based LRPs 
 
 Guidelines for choosing among two types of aggregate abundance-based LRPs are described here: empirical logistic regression-based LRPs and projection-based LRPs that use historical data or projected data, respectively to identify the relationship between aggregate abundances and the probability that all CUs are above Red status. These guidelines are based on assumptions required for each method. If assumptions are not met for either method presented below, then developing aggregate abundance-based LRPs that are aligned with the WSP may not be possible for this SMU. However, developing and evaluating management procedures that account for CU-level status is still prudent even in the absence of aggregate abundance-based LRPs (Section \@ref(recommendations)).
 
@@ -341,15 +326,15 @@ Projection-based LRPs may be inappropriate when:
 -->
 
 
-### Apply aggregate abundance-based LRPs (Step 10)
+### Step 10: Apply aggregate abundance-based LRPs
 
 Any aggregate-abundance methods that meet the above criteria are applied. See the companion working paper, Holt et al. (in review) for details of applications of these methods. Summaries are provided in Section \@ref(case-studies). When status of an SMU is inferred from aggregate abundance-based LRPs using a subset of CUs that are considered representative of the remaining data-deficient CUs, then the resulting status should be considered 'interim' until all component CUs can be assessed. When status of data-deficient CUs cannot be inferred from data-rich CUs, status cannot be assessed with aggregate abundance-based LRPs.
 
-### Compare aggregate abundance-based LRPs (Step 11)
+### Step 11: Compare aggregate abundance-based LRPs
 
 Within Principle 4 for the development of LRPs, we recognize that LRPs can be derived using multiple analytical approaches (Section \@ref(principles)). If multiple aggregate abundance-based methods are applied and statuses differ depending on the method chosen, we suggest (re)considering if all assumptions are met. Statuses that converge among methods provide more strength that LRPs represent a level above serious harm.  Although LRPs that converge may be based on assumptions that are coincidentally incorrect, the principle of Occam's razor supports explanations with fewer exceptions. When LRPs diverge, the underlying assumptions causing those divergences should be explored and further reviewed. We suggest comparing aggregate abundance-based LRPs to current generational (geometric) average spawner abundances instead of annual abundances to integrate across independent cohorts within a generation when deriving SMU status. This approach is consistent with WSP assessments [e.g., @grant2017FraserSockeye2020]. 
 
-### Compare status from aggregate abundance-based LRPs to that from proportion-based LRPs (Step 12)
+### Step 12: Compare status from aggregate abundance-based LRPs to that from proportion-based LRPs
 
 In this step, we recommend comparing status from aggregate abundance-based LRPs to that from proportion-based LRPs identified in step 5. While aggregate abundance-based LRPs exploit observed covariation in dynamics among CUs, observation errors, temporal variation in covariation, and/or infrequent extreme events may result in a break-down in that covariation, and hence statuses from abundance-based LRPs that differ from those based on proportion-base LRPs. We recommend proportion-based LRPs as the default LRP to implement Fish Stock provisions, with aggregate abundance-based LRPs supplemental where required for harvest management. 
 
